2002-07-10  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Party_near + auto_reset ==
	avatar_near; avoids too much monster spawning.

	* drag.cc (Dragging_info): Calling unreadied-usecode AFTER the
	drop should only be done for the SI black sword.

2002-07-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow (but ignore) large changes to loop arrays

2002-07-08  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc,monsters.cc:  Bare hands weapon gets 1 damage point.
	* objs/egg.cc (Animated_egg_object): Fields continue to check for
	NPC's standing in them so they can add damage.

	* shapes/vgafile.h (public): Added set_offset();
	* mapedit/shapeedit.cc:  Update shape origin.

2002-07-08  Willem Jan Palenstijn <wjpalenstijn@users.souceforge.net>
	* Newfile_gump.cc: use SDL's unicode translation for text input
	* lots: moved gump_utils.cc into Gump_manager class
	* exult.cc: don't count dragging for double clicks

2002-07-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow small changes to loop-array in mid-loop in SI
	* useval.*: added operator!= (and changed operator== to return bool)
	* objnames.cc: fixed "x's ashes" code for teleported urn at start
	
2002-07-05  Jeff Freedman  <jeff@amy.nerble.net>

	* shapeinf.{cc,h}:  Figured out 'actor frame' flags in Weapon_info.
	* actors.cc,etc:  Rewrote get_attack_frames() to use the 'frame'
	flags in Weapon_info.

2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap
	* autogen.sh: fixed problem when automake was compiled with aclocal
	data directory /usr/local/share/aclocal

2002-07-04  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc,exult.cc,ucsched.cc:  Added 'rest_time', so Avatar
	will return to a standing position when not doing anything else.
	This fixes the spell-casting bug where you're stuck in the last
	casting frame, but it may cause some new bugs...
